# OpenUniverse

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yml  main.py  requirements.txt
include/raknet/: CMakeLists.txt
server/: asset_loader.py  clone_manager.py  enums.py  legodata.py  module.py  packet.py  server.py  zone_reader.py
server/database/: database.py  session_manager.py
server/modules/auth/: login.py
server/modules/general/: general.py
server/modules/world/: character.py  session.py
server/packets/auth/: login_info.py
server/packets/general/: handshake.py
server/packets/world/: detailed_info.py  game_message.py  load_complete.py  session_info.py  world_info.py  world_join.py
server/packets/world/character/: character_create.py  character_delete.py  character_list.py
server/replica/: base_data.py  component.py
server/replica/components/: character.py  component107.py  controllable_physics.py  destructible.py  inventory.py  render.py  script.py  skill.py  stats.py
sql/: database.pgsql
src/: main.cpp
src/auth/: AuthServer.cpp  AuthServer.h
src/auth/packets/: LoginInfo.cpp  LoginInfo.h
src/core/: Database.cpp  Database.h  LUPacket.cpp  LUPacket.h  Logger.cpp  Logger.h  Serializable.h  Server.cpp  Server.h  SessionManager.cpp  SessionManager.h  Types.h  Utils.cpp  Utils.h
src/core/db/: Account.h  Character.h
src/core/packets/: Handshake.cpp  Handshake.h  PacketHeader.cpp  PacketHeader.h
src/world/: WorldServer.cpp  WorldServer.h
src/world/packets/: MinifigureCreate.cpp  MinifigureCreate.h  MinifigureList.cpp  MinifigureList.h
